--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "commandbar": "^1.8.5",
     "react": "^16.0.0",
     "react-router": "^4.2.0",
     "react-static": "^5.1.6"
